--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,13 @@
 			<artifactId>cloudinary-http5</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.razorpay/razorpay-java -->
+		<dependency>
+		    <groupId>com.razorpay</groupId>
+		    <artifactId>razorpay-java</artifactId>
+		    <version>1.4.8</version>
+		</dependency>
 	</dependencies>
 
 	<build>
