--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,13 @@
 		    <artifactId>razorpay-java</artifactId>
 		    <version>1.4.8</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-mail</artifactId>
+		    <version>3.5.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
